fixing desktop text jump

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -327,6 +327,7 @@ header{
         width: auto;
         display: block;
         text-align: right;
+        min-width: 110px;
     }
 }
 .mainCharInfo{
